[feat] jwt 및 member관련 API 기능 구현

--- a/Back/EnjoyTrip-Spring-gumi4/pom.xml
+++ b/Back/EnjoyTrip-Spring-gumi4/pom.xml
@@ -23,6 +23,16 @@
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
 
+
+		<!-- JWT -->
+		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+
+
 		<!-- LocalDateTime 을 지원하려면 아래 dependency 도 필요합니다 -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
@@ -33,6 +43,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
+		<!-- status code 500 에러 처리 -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+			<version>2.12.3</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
