--- a/Back/EnjoyTrip-Spring-gumi4/src/main/resources/application.properties
+++ b/Back/EnjoyTrip-Spring-gumi4/src/main/resources/application.properties
@@ -39,6 +39,17 @@ username = \uAE40\uC2F8\uD53C
 mybatis.type-aliases-package=com.example.**.model
 mybatis.mapper-locations=mapper/**/*.xml
 
+
+# JWT setting
+jwt.salt=ssafy-screte-key
+#1 hour (millis)
+#jwt.access-token.expiretime=3600000
+jwt.access-token.expiretime=3600000
+# 30 days (millis)
+#jwt.refresh-token.expiretime=2592000000
+jwt.refresh-token.expiretime=2592000000
+
+
 # file upload path : window
 #file.path=C:/board/upload/
 #file.path.upload-images=C:/board/upload/imageUpload
